Delete unused resources (pics, text...)...